syntax = "proto3";

package user.v1;

option go_package = "go-grpc-connect/gen/user/v1;userv1";

message CreateUserRequest {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User) {}
  rpc GetUser(GetUserRequest) returns (User) {}
}
